tests/errors/pow_zero_mod.experr
pow modulus must be non-zero
